# This file is a shell script that supplies the information necessary
# to tailor a template configure script into the configure script
# appropriate for this directory.  For more information, check any
# existing configure script.

srctrigger=gprof.c
srcname="gprof"

# per-host:

# per-target:
case "${target}" in
i[345]86-*-*)	my_target=i386 ;;
sparc-*-*)	my_target=sparc ;;
tahoe-*-*)	my_target=tahoe ;;
vax-*-*)	my_target=vax ;;
ns532-*-*|*-pc532-*)	my_target=ns532;;
*-*-*)		my_target=dummy ;;
esac

target_makefile_frag=config/mt-${my_target}
if [ ! -f ${srcdir}/${target_makefile_frag} ] ; then
	target_makefile_frag=
fi
